--- a/cardapio-frontend/src/components/card/card.css
+++ b/cardapio-frontend/src/components/card/card.css
@@ -5,11 +5,14 @@
   justify-content: center;
   width: 250px;
   border-radius: 8px;
-  box-shadow: rgb(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 16px;
+  margin: 16px;
 }
 
 .card img {
   border-radius: 8px 8px 0px 0px;
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
